<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Menu -->
    <string name="hello">Hello World, PhotoHome!</string>
    <string name="app_name">PhotoAssistant</string>
    <string name="menu">Menu</string>

    <!-- Name of the Buttons -->

    <!-- Buttons in menu -->
    <string name="contractsButton">Contracts</string>
    <string name="photosButton">Photos</string>
    <string name="gridButton">Lighting Grid</string>
    <string name="settingsButton">Settings</string>
    
    <!-- Buttons in Photos Page -->
    <string name="photosButtonSelect">Select</string>
    <string name="photosClearButton">Clear</string>
    <string name="photosViewAllSelected">Next</string>

    <!-- Names for the different pages -->
    <string name="contractsPage">Contracts</string>
    <string name="photosPage">Photos</string>
    <string name="gridPage">Lighting Grids</string>
    <string name="photosSelectedPage">Photos Selected</string>
    <string name="contractInfoInputPage">Model Information</string>
    <string name="fullNameInput">Full Name</string>
    <string name="dateInput">Date</string>
    <string name="emailInput">Email</string>
    <string name="nextToContract">Next</string>
    <string name="signButton">Sign</string>
    <string name="sendContractButton">Send</string>
    <string name="createGridButton">Create New</string>
    <string name="existingGridButton">Existing</string>
    <string name="createGridInstructions">"Create a new grid "</string>
    <string name="nameOfGrid">Name</string>
    <string name="gridListTitle">Existing grids</string>
    <string name="doneGridButton">Done</string>
    <string name="selectContractText">Select the contract for you client</string>
    <string name="settingsPage">Settings</string>
    <string name="enterClientInfo">Enter client information</string>
    <string name="enterPhotographersInfo">Enter photographer\'s information</string>
    <string name="currentPhotographersInfo">Current photographers information</string>

</resources>