<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" android:background="@drawable/gird_bck">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:text="@string/gridPage"
        android:textSize="60sp"
        android:textStyle="bold" android:textColor="#000000"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:text="@string/gridListTitle"
        android:textSize="30sp"
        android:textStyle="bold|italic" android:textColor="#000000"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ListView
            android:id="@+id/gridList"
            android:layout_width="450sp"
            android:layout_height="263sp"
            android:layout_marginTop="20sp"
            android:scrollbarAlwaysDrawVerticalTrack="true"
            android:scrollbarSize="15sp" android:background="#000000" android:divider="@drawable/divider" android:dividerHeight="2sp" android:fadeScrollbars="false">
        </ListView>
		
        <!-- added separator -->
        <View
            android:id="@+id/View01"
            android:layout_width="2dip"
            android:layout_height="200dip"
            android:background="#2B497B" android:layout_marginLeft="100sp" android:layout_marginRight="10sp" android:layout_marginTop="35sp"/>
		<!-- added separator -->
        
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="90sp"
            android:layout_marginTop="40sp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/createGridInstructions"
                android:textSize="30sp"
                android:textStyle="bold|italic" android:textColor="#000000"/>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="wrap_content"
                android:layout_height="50sp" >

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10sp"
                    android:text="@string/nameOfGrid"
                    android:textSize="25sp" android:textColor="#000000"/>

                <EditText
                    android:id="@+id/newGridName"
                    android:layout_width="150sp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15sp"
                    android:layout_marginTop="10sp"
                    android:inputType="textPersonName" />
            </LinearLayout>

            <Button
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10sp"
                android:onClick="onCreateNewClick"
                android:text="@string/createGridButton" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>