<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:background="@drawable/settings_bck">

    <TextView
        android:id="@+id/settingsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settingsPage"
        android:textColor="#000000"
        android:textSize="60sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/enterPhotographersInfo" android:textSize="30sp" android:textStyle="bold|italic" android:textColor="#000000" android:layout_marginTop="40sp"/>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="40sp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fullNameInput"
            android:textColor="#000000"
            android:textSize="25sp"
            android:width="310sp" />

        <EditText
            android:id="@+id/fullName"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" >

            <requestFocus />
        </EditText>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10sp" >

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="25sp"
            android:width="310sp" android:text="@string/emailInput"/>

        <EditText
            android:id="@+id/emailInput2"
            android:layout_width="350sp"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Update" android:layout_gravity="center" android:layout_marginTop="20sp" android:layout_marginRight="35sp" android:textSize="20sp" android:onClick="onUpdateClick"/>

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold|italic" android:text="@string/currentPhotographersInfo"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" android:layout_marginTop="20sp">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Full Name"
                android:textColor="#000000"
                android:textSize="25sp" android:width="310sp"/>

            <TextView
                android:id="@+id/currentDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(Empty)" android:textSize="25sp" android:textStyle="bold" android:textColor="#000000"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginTop="15sp">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Email:"
                android:textColor="#000000"
                android:textSize="25sp"
                android:width="310sp" />

            <TextView
                android:id="@+id/currentEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(Empty)"
                android:textColor="#000000"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>